--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "create": "node create-db.js"
   },
   "repository": {
     "type": "git",
